--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 
 
 .search-button{
-  /* background-color: brown; */
+  
   height: 39px;
   width: 7%;
   background-color: lightcoral;
@@ -17,7 +17,6 @@
   border: none;
   margin-top: 27px;
   padding: 8px; 
-  /* background-color: blue; */
   margin-left: 20%;
   border-radius: 4px;
 }
@@ -25,11 +24,10 @@
 .recipes{
   display: flex;
   justify-content: space-around;
-  /* space-between */
   flex-wrap: wrap;
 }
 
-.recip{
+.recipss{
   border-radius: 10;
   box-shadow: 0px 5px 20px rgb(71,71,71);
   margin: 20px;
@@ -45,4 +43,5 @@
   border-radius: 50%;
   width: 250px;
   height: 250px;
+  border-color:silver;
 }
